Add LICENCE and README

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Multi-Step Agent (MSA)
 
-A sophisticated AI agent capable of answering complex questions through multi-step reasoning, tool usage, and information synthesis.
+A simple AI agent capable of answering complex questions through multi-step reasoning, tool usage, and information synthesis.
 
 ## Overview
 
